chrome/userChrome.css
/*
┌─┐┬┌┬┐┌─┐┬  ┌─┐
└─┐││││├─┘│  ├┤ 
└─┘┴┴ ┴┴  ┴─┘└─┘
┌─┐┌─┐─┐ ┬      
├┤ │ │┌┴┬┘      
└  └─┘┴ └─

by Miguel Avila & SIMULATAN

*/

/*

┌─┐┌─┐┌┐┌┌─┐┬┌─┐┬ ┬┬─┐┌─┐┌┬┐┬┌─┐┌┐┌
│  │ ││││├┤ ││ ┬│ │├┬┘├─┤ │ ││ ││││
└─┘└─┘┘└┘└  ┴└─┘└─┘┴└─┴ ┴ ┴ ┴└─┘┘└┘
*/

:root {
  --sfwindow: #282a36;
  --sfsecondary: #44475a;
  --tab-min-height: 15px!important;
  --urlbar-min-height: 10px!important;
  --toolbarbutton-inner-padding: 4px!important;
  --urlbar-icon-padding: 2px!important;
  --ROOT-urlbar-height: 30px;
  --urlbar-height: var(--ROOT-urlbar-height) !important;
  --urlbar-container-height: var(--urlbar-height) !important;
  --urlbar-toolbar-height: var(--urlbar-height) !important;
  --inline-tab-padding: 5px !important;
  /* horizontal line between tabs section and toolbar section */
  --tabs-navbar-separator-style: none !important;
  /* border of URL bar */
  --focus-outline: 0 !important;
  --focus-outline-inset: 0 !important;
}

/* Urlbar View */

/*─────────────────────────────*/
/* Comment this section if you */
/* want to show the URL Bar    */
/*─────────────────────────────*/

/*
.urlbarView {
  display: none !important;
}
*/

hbox#urlbar {
  --urlbar-height: var(--ROOT-urlbar-height) !important;
}

.tab-text {
  font-size: 90%;
}

/*─────────────────────────────*/

/*
┌─┐┌─┐┬  ┌─┐┬─┐┌─┐
│  │ ││  │ │├┬┘└─┐
└─┘└─┘┴─┘└─┘┴└─└─┘
*/

/* Tabs  */
#tabbrowser-tabs:not([movingtab])
  > #tabbrowser-arrowscrollbox
  > .tabbrowser-tab
  > .tab-stack
  > .tab-background[multiselected='true'],
#tabbrowser-tabs:not([movingtab])
  > #tabbrowser-arrowscrollbox
  > .tabbrowser-tab
  > .tab-stack
  > .tab-background[selected='true'] {
  background-image: none !important;
  background-color: var(--toolbar-bgcolor) !important;
}

#tabbrowser-tabs:not([secondarytext-unsupported]) .tab-label-container {
  height: 1.8em !important;
}

/* Inactive tabs color */
#navigator-toolbox {
  background-color: var(--sfwindow) !important;
}

/* Window colors  */
:root {
  --toolbar-bgcolor: var(--sfsecondary) !important;
  --toolbar-field-background-color: var(--toolbar-bgcolor) !important;
  --toolbar-field-focus-background-color: var(--toolbar-bgcolor) !important;
  --tabs-border-color: var(--sfsecondary) !important;
  --lwt-sidebar-background-color: var(--sfwindow) !important;
  --lwt-toolbar-field-focus: var(--sfsecondary) !important;
}

/* Sidebar color  */
#sidebar-box,
.sidebar-placesTree {
  background-color: var(--sfwindow) !important;
}

#tabs-newtab-button:hover > image {
  background-color: color-mix(in srgb, var(--toolbar-bgcolor) 30%, transparent) !important;
}

/*

┌┬┐┌─┐┬  ┌─┐┌┬┐┌─┐            
 ││├┤ │  ├┤  │ ├┤             
─┴┘└─┘┴─┘└─┘ ┴ └─┘            
┌─┐┌─┐┌┬┐┌─┐┌─┐┌┐┌┌─┐┌┐┌┌┬┐┌─┐
│  │ ││││├─┘│ ││││├┤ │││ │ └─┐
└─┘└─┘┴ ┴┴  └─┘┘└┘└─┘┘└┘ ┴ └─┘

*/

#page-action-buttons {
  display: none;
}


/* Tabs elements  */
.tab-close-button {
  /* make it transparent */
  opacity: 0;
  transition: 0.5s;
  border-radius: 50%;
}

.tab-close-button:hover {
  /* make it transparent */
  opacity: 100;
  transition: 0.5s;
}


.tabbrowser-tab:not([pinned]) .tab-icon-image {
  opacity: 0 !important;
  transition: 0.5s !important;
  width: 0px !important;
}

.tabbrowser-tab:not([pinned]):hover .tab-icon-image {
  opacity: 100 !important;
  transition: 0.5s !important;
  display: inline-block !important;
}

.tabbrowser-tab:not([pinned]):hover .tab-icon-image {
  width: 16px !important;
}

#nav-bar:not([tabs-hidden='true']) {
  box-shadow: none;
}

#tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs])
  > #tabbrowser-arrowscrollbox
  > .tabbrowser-tab[first-visible-unpinned-tab] {
  margin-inline-start: 0 !important;
}

:root {
  --toolbarbutton-border-radius: 0 !important;
  --tab-border-radius: 0 !important;
  --tab-block-margin: 0 !important;
}

.tab-background {
  border-right: 0px solid rgba(0, 0, 0, 0) !important;
}

.tabbrowser-tab:is([visuallyselected='true'], [multiselected])
  > .tab-stack
  > .tab-background {
  box-shadow: none !important;
}

.tabbrowser-tab[last-visible-tab='true'] {
  padding-inline-end: 0 !important;
}

.tabbrowser-tab {
  --tab-label-mask-size: 1em !important;
  /* remove space between tabs */
  padding: 0 !important;
}

.tab-content[pinned], #firefox-view-button {
  /* make pinned tabs rectangular */
  padding: 0 5px !important;
}

/* leave some more space for tab text */
.tab-content:not([pinned]) {
  padding-right: calc(var(--inline-tab-padding) / 4) !important;
}

/* fix width of reload button */
toolbarbutton[id="reload-button"] {
  padding: 0;
}

/* fix position of tab close button */
.tab-close-button {
  margin-inline-end: calc(var(--inline-tab-padding) / 2) !important;
  width: 20px !important;
  height: 20px !important;
  padding: 2px !important;
}

/* fix padding of firefox view button */
:root:not([privatebrowsingmode=temporary], [firefoxviewhidden]) :is(toolbarbutton, toolbarpaletteitem) + #tabbrowser-tabs,
:root[privatebrowsingmode=temporary]:not([firefoxviewhidden]) :is(
  toolbarbutton:not(#firefox-view-button),
  toolbarpaletteitem:not(#wrapper-firefox-view-button)
) + #tabbrowser-tabs {
  margin-inline-start: 0 !important;
}

/* fix background color of view button on hover */
#TabsToolbar #firefox-view-button:hover:not([open]) {
  background-color: var(--tab-hover-background-color) !important;
}

/* remove background color of image because that's already handled by the rule above */
#TabsToolbar #firefox-view-button:hover:not([open]) > .toolbarbutton-icon {
  background-color: transparent !important;
}

/* remove background of icon, to be set again on another element below */
#TabsToolbar #firefox-view-button[open] > .toolbarbutton-icon:-moz-lwtheme {
  background-image: none !important;
}
/* ... */

